# ME433

./: README.md
HW10/555Timer_Breakout/: #auto_saved_files#  555Timer_Breakout-B_Cu.gbr  555Timer_Breakout-B_Mask.gbr  555Timer_Breakout-B_Paste.gbr  555Timer_Breakout-B_Silkscreen.gbr  555Timer_Breakout-Edge_Cuts.gbr  555Timer_Breakout-F_Cu.gbr  555Timer_Breakout-F_Mask.gbr  555Timer_Breakout-F_Paste.gbr  555Timer_Breakout-F_Silkscreen.gbr  555Timer_Breakout-job.gbrjob  555Timer_Breakout.kicad_pcb  555Timer_Breakout.kicad_prl  555Timer_Breakout.kicad_pro  555Timer_Breakout.kicad_sch  _autosave-555Timer_Breakout.kicad_sch  ~555Timer_Breakout.kicad_sch.lck
HW11/PiZero_FileTransfer/: EdgeDetection.py  gainTest.py  test.py
HW12/main/: CMakeLists.txt  main.c
HW13/: CMakeLists.txt  imu_helpers.c  imu_helpers.h  main.c  usb_descriptors.c
HW16/: CMakeLists.txt
HW16/main/: main.c
HW17/main/: CMakeLists.txt
HW17/pico/: CMakeLists.txt
HW17/pico/main/: main.c
HW17/zero/: sendControlInput.py
HW2-3/blink/: CMakeLists.txt
HW3/: CMakeLists.txt
HW3/main/: main.c
HW4/: CMakeLists.txt
HW4/main/: CMakeLists.txt  main.c
HW5/: CMakeLists.txt
HW5/main/: CMakeLists.txt  main.c
HW6/main/: main.c
HW7/: CMakeLists.txt
HW7/main/: CMakeLists.txt  main.c  oled.c  oled.h
HW9/: CMakeLists.txt
HW9/main/: CMakeLists.txt  main.c
PCB Design/4.30_Lec/: 4.30_Lec.kicad_prl  4.30_Lec.kicad_pro
